# train-tracker

./: .gitignore  CLAUDE.md  README.md
.githooks/: pre-commit
deploy/: docker-compose.yml  tinyproxy.conf  tinyproxy.filter
service/: .dockerignore  Dockerfile  pyproject.toml
service/src/traintracker/: __init__.py  metrics.py  redaction.py
service/src/traintracker/gateway/: __init__.py  __main__.py  client.py
service/src/traintracker/gtfs/: __init__.py  calendar.py  fetch.py  gtfstime.py  joinrate.py  pinning.py  snapshot.py  stops.py
service/src/traintracker/history/: __main__.py  nightly.py  retention.py  store.py  sync.py
service/src/traintracker/poller/: __init__.py  __main__.py  breaker.py  decode.py  healthcheck.py  loop.py  schedule.py
service/src/traintracker/state/: eventhub.py  eventlog.py  geo.py  ghost.py  merge.py  station.py  store.py
service/tests/: conftest.py  test_metrics.py  test_redaction.py
service/tests/fixtures/gtfs_static_sample/: calendar.txt  calendar_dates.txt  trips.txt
service/tests/fixtures/replay_20260718/: stops.txt
service/tests/gateway/: test_client.py
service/tests/gtfs/: test_calendar.py  test_fetch.py  test_gtfstime.py  test_joinrate.py  test_pinning.py  test_snapshot.py  test_stops.py
service/tests/history/: test_nightly.py  test_retention.py  test_store.py  test_sync.py
service/tests/poller/: test_breaker.py  test_decode.py  test_healthcheck.py  test_loop.py  test_schedule.py
service/tests/state/: test_eventhub.py  test_ghost.py  test_merge.py  test_replay.py  test_station.py  test_store.py
(+15 files in other folders)
