[project]
name = "traintracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ronnie Chong", email = "ronniechong@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "gtfs-realtime-bindings>=2.1.0",
    "httpx>=0.28.1",
]

[build-system]
requires = ["uv_build>=0.11.28,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
